--- a/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor
+++ b/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor
@@ -1,7 +1,5 @@
-﻿@inject ISnackbarNotificationService SnackbarService
-@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
-@using DropBear.Blazor.Interfaces
-@implements IDisposable
+﻿@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
+
 
 <div class="snackbar-container">
     @foreach (var snackbar in _snackbars)
