--- a/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor.css
+++ b/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor.css
@@ -1,1 +1,19 @@
-﻿
+﻿.snackbar-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 10px;
+  max-width: 500px;
+  width: 100%;
+  z-index: 9999;
+}
+
+@media (max-width: 600px) {
+  .snackbar-container {
+    left: 20px;
+    right: 20px;
+    max-width: calc(100% - 40px);
+  }
+}
