--- a/DropBear.Blazor/Components/Loaders/ShortWaitSpinner.razor
+++ b/DropBear.Blazor/Components/Loaders/ShortWaitSpinner.razor
@@ -7,6 +7,8 @@
         <div class="spinner-container">
             <div class="spinner"></div>
         </div>
-        <p>@Message<span class="dots"></span></p>
+        <p>
+            @Message<span class="dots"></span>
+        </p>
     </div>
 </div>
