--- a/DropBear.Blazor/wwwroot/styles/base.css
+++ b/DropBear.Blazor/wwwroot/styles/base.css
@@ -71,8 +71,8 @@
   /* Typography */
   --font-family: 'Poppins', sans-serif;
   --font-size-base: 16px;
-  --font-size-sm: calc(var(--font-size-sm) * var(--inverse-golden-ratio));
-  --font-size-md: calc(var(--font-size-sm) * var(--golden-ratio));
+  --font-size-sm: calc(var(--font-size-base) * var(--inverse-golden-ratio));
+  --font-size-md: calc(var(--font-size-base) * var(--golden-ratio));
   --font-size-lg: calc(var(--font-size-base) * var(--sqrt-golden-ratio));
   --line-height-base: var(--sqrt-golden-ratio);
 
