--- a/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
+++ b/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
@@ -1,4 +1,5 @@
-﻿<div class="loading-container">
+﻿@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
+<div class="loading-container">
     <div class="loading-card @GetThemeCssClass()">
         <h3>
             <i class="icon fas fa-tasks" aria-hidden="true"></i>
