--- a/DropBear.Blazor/Components/Files/DropBearFileDownloader.razor
+++ b/DropBear.Blazor/Components/Files/DropBearFileDownloader.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.JSInterop
 @inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime JsRuntime
 
 <div class="file-download-container @ThemeClass">
     <div class="file-download-component">
