--- a/DropBear.Blazor/Components/Modals/DropBearModal.razor
+++ b/DropBear.Blazor/Components/Modals/DropBearModal.razor
@@ -1,10 +1,10 @@
 ﻿@inject IModalService ModalService
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime JsRuntime
 @using DropBear.Blazor.Interfaces
 @using Microsoft.JSInterop
 @inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
 
-<div class="@GetModalClasses()" id="dropBearModal" @onclick="CloseModalOnBackdropClick">
+<div class="@GetModalClasses()" id="@Id" @onclick="CloseModalOnBackdropClick">
     <div class="modal-content" @onclick:stopPropagation>
         <div class="modal-header">
             <h2>@Title</h2>
@@ -18,7 +18,7 @@
         <div class="modal-footer">
             @foreach (var button in Buttons)
             {
-                <button class="@GetButtonClasses(button.Type)" @onclick="() => button.OnClick.InvokeAsync()">
+                <button class="@GetButtonClasses(button.Color)" @onclick="() => button.OnClick.InvokeAsync()">
                     @if (!string.IsNullOrEmpty(button.Icon))
                     {
                         <i class="@button.Icon"></i>
@@ -29,5 +29,3 @@
         </div>
     </div>
 </div>
-
-<button @onclick="ToggleTheme">Toggle Theme</button>
